# kiero

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: build-and-release.yml
cmake/: kieroConfig.cmake.in
